namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: reverse-words-stage
  labels:
    integrity-enforced: "true"
