deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: reverse-words
  name: reverse-words
spec:
  template:
    spec:
      containers:
      - env:
        - name: RELEASE
          value: Stage Release
        - $patch: replace
        image: quay.io/gajananan/tekton-reversewords:77d5dd653e165456a2e2c3b6d6b4962abffd8a22
        name: reverse-words
      imagePullSecrets:
      - name: registry-secret
